<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center_horizontal"
    android:background="@android:color/white"
    android:id="@+id/loginLayout">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="34sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="24dp"
        android:background="@android:color/transparent"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="20dp"
        android:hint="@string/editName"
        android:textSize="22sp"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginBottom="18dp"
        android:hint="@string/editEmail"
        android:textSize="22sp"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:hint="@string/editPassword"
        android:inputType="textPassword"
        android:textSize="22sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:layout_weight="0.5"/>

    <Button
        android:id="@+id/button_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:backgroundTint="@color/black"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginBottom="16dp"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:backgroundTint="@color/skyBlue"
        android:textColor="@android:color/white"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"/>

</LinearLayout>
