<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center_horizontal"
    android:id="@+id/settingsLayout">

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_gravity="start"
        android:scaleType="fitCenter"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/buttonBack"
        android:background="?android:attr/selectableItemBackground"
        android:src="@drawable/arrow"
        app:tint="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:background="@android:color/transparent"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="1dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/darkMode"
            android:textSize="22sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_dark_mode"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:layout_marginRight="15dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="59dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:layout_width="262dp"
            android:layout_height="46dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="@string/Language"
            android:textSize="22sp" />

        <Button
            android:id="@+id/buttonChangeLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/skyBlue"
            android:text="@string/language"
            android:textColor="@color/white" />
    </LinearLayout>
    <EditText
        android:id="@+id/editTarget_protein"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/target_protein"
        android:inputType="number" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:gravity="center_vertical"
            android:text="Daily Notification"
            android:textSize="22sp" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switch_daily_notification"
            android:layout_width="56dp"
            android:layout_height="50dp"
            android:layout_marginRight="15dp" />
    </LinearLayout>

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="195dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@drawable/clock_style"
        android:timePickerMode="spinner" />


    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/buttonNotification1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/black"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"
        android:text="@string/notification1" />

    <Button
        android:id="@+id/buttonNotification2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/skyBlue"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:layout_marginBottom="20dp"
        android:text="@string/notification2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@android:color/transparent"
        android:text="Version 1.4 v"
        android:textSize="16sp" />


</LinearLayout>