<resources>
    <string name="app_name">ProteinManager</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbs</string>
    <string name="calories">Kcal</string>
    <string name="steps">Steps</string>
    <string name="addProduct">Add Product</string>
    <string name="productName">Product Name</string>
    <string name="language">🌐 Choose Language</string>
    <string name="backup">Backup</string>
    <string name="findShop">Find Shop</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="welcome">Welcome</string>
    <string name="logout">Logout</string>
    <string name="save">Save</string>
    <string name="buttonBack">Go back</string>
    <string name="editName">Edit Name</string>
    <string name="editEmail">Edit Email</string>
    <string name="notification1">Immediate notification</string>
    <string name="notification2">Notification in 15 sec</string>
    <string name="editPassword">Edit Password</string>
    <string name="productCode">Product Code</string>
    <string name="Language">Language</string>
    <string name="darkMode">Dark Mode</string>
    <string name="no_steps_sensor">No Sensor</string>
    <string name="settings">Settings</string>
    <string name="login_success">Logged in successfully</string>
    <string name="login_failed">Invalid email or password</string>
    <string name="fields_required">All fields are required</string>
    <string name="register_success">Registered successfully</string>
    <string name="target_protein">Target Protein (g)</string>
    <string name="consumed_protein">Consumed Protein (g)</string>
    <string name="protein_display">Protein: %1$d / %2$d g</string>
    <string-array name="language_options">
        <item>English</item>
        <item>Polski</item>
    </string-array>
</resources>



